# bsdiff

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cleverm/bsdifftool/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  bzip2.c  native-lib.cpp
app/src/main/java/com/cleverm/bsdifftool23/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cleverm/bsdifftool/: ExampleUnitTest.java
bsdifflibrary/: build.gradle
bsdifflibrary/src/main/: AndroidManifest.xml
bsdifflibrary/src/main/java/com/cleverm/bsdifftool/: BsDiff.java
bsdifflibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
